--- a/cf/i18n/resources/pt-br.untranslated.json
+++ b/cf/i18n/resources/pt-br.untranslated.json
@@ -1248,6 +1248,10 @@
     "translation": "INSTANCE_MEMORY"
   },
   {
+    "id": "Incorrect usage: Value for {{.ArgumentName}} must be {{.ExpectedType}}",
+    "translation": ""
+  },
+  {
     "id": "Incorrect usage: app-instance-index cannot be negative",
     "translation": "Incorrect usage: app-instance-index cannot be negative"
   },
@@ -1473,6 +1477,10 @@
   },
   {
     "id": "Stop all instances of the app, then start them again. This may cause downtime.",
+    "translation": ""
+  },
+  {
+    "id": "TASK_ID",
     "translation": ""
   },
   {
@@ -1890,6 +1898,10 @@
   {
     "id": "host",
     "translation": "host"
+  },
+  {
+    "id": "integer",
+    "translation": ""
   },
   {
     "id": "label",
