--- a/cf/i18n/resources/fr-fr.all.json
+++ b/cf/i18n/resources/fr-fr.all.json
@@ -3312,6 +3312,10 @@
     "translation": "Format json incorrect : fichier : {{.JSONFile}}\n\t\t\nExemple de fichier json valide :\n[\n  {\n    \"protocol\": \"tcp\",\n \"destination\": \"10.244.1.18\",\n    \"ports\": \"3306\"\n  }\n]"
   },
   {
+    "id": "Incorrect usage: Value for {{.ArgumentName}} must be {{.ExpectedType}}",
+    "translation": ""
+  },
+  {
     "id": "Incorrect usage: app-instance-index cannot be negative",
     "translation": ""
   },
@@ -4972,6 +4976,10 @@
     "translation": "Fourni par le système :"
   },
   {
+    "id": "TASK_ID",
+    "translation": ""
+  },
+  {
     "id": "TIMEOUT",
     "translation": "DELAI_ATTENTE"
   },
@@ -6058,6 +6066,10 @@
   {
     "id": "instances:",
     "translation": "instances :"
+  },
+  {
+    "id": "integer",
+    "translation": ""
   },
   {
     "id": "invalid inherit path in manifest",
