--- a/cf/i18n/resources/fr-fr.untranslated.json
+++ b/cf/i18n/resources/fr-fr.untranslated.json
@@ -776,6 +776,10 @@
     "translation": "Global options:"
   },
   {
+    "id": "Incorrect usage: Value for {{.ArgumentName}} must be {{.ExpectedType}}",
+    "translation": ""
+  },
+  {
     "id": "Incorrect usage: app-instance-index cannot be negative",
     "translation": "Incorrect usage: app-instance-index cannot be negative"
   },
@@ -985,6 +989,10 @@
   },
   {
     "id": "Stop all instances of the app, then start them again. This may cause downtime.",
+    "translation": ""
+  },
+  {
+    "id": "TASK_ID",
     "translation": ""
   },
   {
@@ -1362,6 +1370,10 @@
   {
     "id": "instances",
     "translation": "instances"
+  },
+  {
+    "id": "integer",
+    "translation": ""
   },
   {
     "id": "name:",
