handle int parsing if passed in string
[finishes #134202499]

Signed-off-by: Matthew Boedicker <mboedicker@pivotal.io>

--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -1320,6 +1320,10 @@
     "translation": "PORT"
   },
   {
+    "id": "POSITION",
+    "translation": ""
+  },
+  {
     "id": "Parameters as JSON",
     "translation": "Parameters as JSON"
   },
