--- a/cf/i18n/resources/es-es.all.json
+++ b/cf/i18n/resources/es-es.all.json
@@ -4008,6 +4008,10 @@
     "translation": "PUERTO"
   },
   {
+    "id": "POSITION",
+    "translation": ""
+  },
+  {
     "id": "Paid service plans",
     "translation": "Planes de servicio de pago"
   },
