--- a/cf/i18n/resources/it-it.all.json
+++ b/cf/i18n/resources/it-it.all.json
@@ -4008,6 +4008,10 @@
     "translation": "PORTA"
   },
   {
+    "id": "POSITION",
+    "translation": ""
+  },
+  {
     "id": "Paid service plans",
     "translation": "Piani di servizio a pagamento"
   },
