--- a/cf/i18n/resources/it-it.untranslated.json
+++ b/cf/i18n/resources/it-it.untranslated.json
@@ -892,6 +892,10 @@
     "translation": ""
   },
   {
+    "id": "POSITION",
+    "translation": ""
+  },
+  {
     "id": "Parameters as JSON",
     "translation": "Parameters as JSON"
   },
