--- a/cf/i18n/resources/ja-jp.all.json
+++ b/cf/i18n/resources/ja-jp.all.json
@@ -4008,6 +4008,10 @@
     "translation": "ポート"
   },
   {
+    "id": "POSITION",
+    "translation": ""
+  },
+  {
     "id": "Paid service plans",
     "translation": "有料サービス・プラン"
   },
