--- a/cf/i18n/resources/ko-kr.all.json
+++ b/cf/i18n/resources/ko-kr.all.json
@@ -4008,6 +4008,10 @@
     "translation": "포트"
   },
   {
+    "id": "POSITION",
+    "translation": ""
+  },
+  {
     "id": "Paid service plans",
     "translation": "유료 서비스 플랜"
   },
