--- a/cf/i18n/resources/zh-hans.untranslated.json
+++ b/cf/i18n/resources/zh-hans.untranslated.json
@@ -1332,6 +1332,10 @@
     "translation": "PORT"
   },
   {
+    "id": "POSITION",
+    "translation": ""
+  },
+  {
     "id": "Parameters as JSON",
     "translation": "Parameters as JSON"
   },
