--- a/cf/i18n/resources/zh-hant.all.json
+++ b/cf/i18n/resources/zh-hant.all.json
@@ -4008,6 +4008,10 @@
     "translation": ""
   },
   {
+    "id": "POSITION",
+    "translation": ""
+  },
+  {
     "id": "Paid service plans",
     "translation": "付費服務方案"
   },
