--- a/cf/i18n/resources/fr-fr.untranslated.json
+++ b/cf/i18n/resources/fr-fr.untranslated.json
@@ -884,6 +884,10 @@
     "translation": "PORT"
   },
   {
+    "id": "POSITION",
+    "translation": ""
+  },
+  {
     "id": "Parameters as JSON",
     "translation": "Parameters as JSON"
   },
