--- a/cf/i18n/resources/zh-hans.all.json
+++ b/cf/i18n/resources/zh-hans.all.json
@@ -3824,7 +3824,7 @@
     "translation": "无目标空间，请使用 '{{.CFTargetCommand}}'"
   },
   {
-    "id": "No space targeted, use '{{.Command}}' to target a space",
+    "id": "No space targeted, use '{{.Command}}' to target a space.",
     "translation": "无目标空间，请使用 '{{.Command}}' 来确定目标空间"
   },
   {
@@ -5004,7 +5004,7 @@
     "translation": "提示: 如果您在防火墙后面，并且需要 HTTP 代理，请验证 https_proxy 环境变量是否正确设置。或者，检查网络连接。"
   },
   {
-    "id": "TIP: No space targeted, use '{{.CfTargetCommand}}' to target a space",
+    "id": "TIP: No space targeted, use '{{.CfTargetCommand}}' to target a space.",
     "translation": "提示: 无目标空间，请使用 '{{.CfTargetCommand}}' 来确定目标空间"
   },
   {
